# CG-Bundler

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  all_compressed_final.rs  all_compressed_fixed.rs  all_compressed_working.rs  deny.toml  simple_output  sonar-project.properties  test_comprehensive_doc.rs  test_comprehensive_doc_compressed.rs  test_doc.rs  test_doc_attributes.rs  test_doc_attributes_fixed.rs  test_doc_compressed.rs
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  deny.yml  dependency-update.yml  release.yml  security.yml  welcome.yml
examples/: README.md  basic.rs
examples/competitive-programming/: Cargo.toml
examples/competitive-programming/src/: algorithm.rs  data_structures.rs  lib.rs  main.rs  solver.rs
src/: bundler.rs  cargo_project.rs  cli.rs  config.rs  debug_tests.rs  discovery.rs  error.rs  file_manager.rs  file_processor.rs  lib.rs  lib_tests.rs  main.rs  minifier.rs  parser.rs  performance.rs  reporter.rs  rust_singler.rs  syntax_tree.rs  traits.rs  transformer.rs
test_project/: Cargo.toml
test_project/src/: lib.rs  main.rs
test_project/src/actions/: action.rs  combat.rs  combined.rs  factory.rs  mod.rs  movement.rs  utility.rs  validation.rs
test_project/src/ai/: adaptive_strategy.rs  adaptive_strategy_demo.rs  combat.rs  cover.rs  cover_strategy.rs  mod.rs  objective.rs  simple_bomb_strategy.rs  splash_bomb_strategy.rs  strategy.rs
test_project/src/core/: agent.rs  mod.rs  position.rs  types.rs
test_project/src/game/: grid.rs  mod.rs  rules.rs  state.rs
test_project/src/io/: mod.rs  parser.rs
test_project/src/utils/: collections.rs  math.rs  mod.rs
tests/: cli_tests.rs  comprehensive_tests.rs  integration_tests.rs  main_functionality_tests.rs  unit_tests.rs
