[package]
name = "cg-bundler"
version = "1.1.0"
authors = ["MathieuSoysal"]
description = "A Rust code compression tool that minifies Rust codebases into single file or one-line format"
license = "MIT"
repository = "https://github.com/MathieuSoysal/cg-bundler"
homepage = "https://github.com/MathieuSoysal/cg-bundler"
documentation = "https://docs.rs/cg-bundler"
readme = "README.md"
keywords = ["minify", "compress", "rust", "code-compression", "bundler"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[[bin]]
name = "cg-bundler"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut", "parsing"] }
proc-macro2 = "1.0"
quote = "1.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.3"
colored = "2.0"
cargo_metadata = "0.18"
prettyplease = "0.2"
notify = "6.0"
ctrlc = "3.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
proptest = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
