[package]
name = "cg-bundler"
version = "1.1.10"
authors = ["MathieuSoysal"]
description = "A powerful Rust code bundler that combines multiple source files into a single, optimized file for competitive programming and code distribution. Features smart module expansion, code optimization, and minification."
license = "MIT"
repository = "https://github.com/MathieuSoysal/cg-bundler"
homepage = "https://github.com/MathieuSoysal/cg-bundler"
documentation = "https://docs.rs/cg-bundler"
readme = "README.md"
keywords = ["competitive-programming", "single-file", "code-bundler", "codeforces", "codingame"]
categories = ["command-line-utilities", "development-tools", "compression", "development-tools::build-utils"]
edition = "2021"
rust-version = "1.75.0"
exclude = [
    "target/",
    "test_project/",
    "tests/",
    ".github/",
    "examples/",
    "*.md",
    "sonar-project.properties",
    ".gitignore"
]

[[bin]]
name = "cg-bundler"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut", "parsing"] }
proc-macro2 = "1.0"
quote = "1.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.3"
colored = "2.0"
cargo_metadata = "0.18"
prettyplease = "0.2"
notify = "6.0"
ctrlc = "3.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
proptest = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Allow some pedantic lints that are too strict for this project
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
doc_markdown = "allow"
struct_excessive_bools = "allow"
unused_self = "allow"
needless_pass_by_ref_mut = "allow"
multiple_crate_versions = "allow"
use_self = "allow"
ref_option = "allow"
map_unwrap_or = "allow"
redundant_closure_for_method_calls = "allow"
default_trait_access = "allow"
elidable_lifetime_names = "allow"
wildcard_imports = "allow"
unused_peekable = "allow"
equatable_if_let = "allow"
ignored_unit_patterns = "allow"
