[package]
name = "cg-bundler"
version = "1.1.10"
authors = ["MathieuSoysal"]
description = "A powerful Rust code bundler that combines multiple source files into a single, optimized file for competitive programming and code distribution. Features smart module expansion, code optimization, and minification."
license = "MIT"
repository = "https://github.com/MathieuSoysal/cg-bundler"
homepage = "https://github.com/MathieuSoysal/cg-bundler"
documentation = "https://docs.rs/cg-bundler"
readme = "README.md"
keywords = ["bundler", "single-file", "code-bundler", "codeforces", "codingame"]
categories = ["command-line-utilities", "development-tools", "compression", "development-tools::build-utils"]
edition = "2021"
rust-version = "1.75.0"
exclude = [
    "target/",
    "test_project/",
    "tests/",
    ".github/",
    "examples/",
    "*.md",
    "sonar-project.properties",
    ".gitignore"
]

[[bin]]
name = "cg-bundler"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut", "parsing"] }
proc-macro2 = "1.0"
quote = "1.0"
anyhow = "1.0"
thiserror = "2.0"
walkdir = "2.3"
colored = "3.0"
cargo_metadata = "0.21"
prettyplease = "0.2"
notify = "8.2"
ctrlc = "3.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
proptest = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Allow multiple crate versions as this is often unavoidable with system dependencies
multiple_crate_versions = "allow"
